lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
step

def step()
{
	setPouseeDesiree = 2 
	if (getVitesseY() < - 10 )
	{
		setPouseeDesiree = setPouseeDesiree + 1
	}
}
